# Hackathon-II-Evolution-of-todo

./: .gitignore  AGENTS.md  Dockerfile  FINAL_FIX.md  FINAL_README.md  PROJECT_CONSTITUTION.md  PROJECT_SUMMARY.md  README.md  RUNNING_SETUP.md  api_backend.py  chatbot_demo.html  comprehensive_debug.py  comprehensive_test.py  debug_backend.py  debug_bcrypt.py  debug_minimal.py  debug_run_server.py  debug_server.py  debug_with_db.py  direct_test.py  final_verification.py  generate_test_token.py  initialize_db.py  main.py  phase3_ai_chatbot.html  run_backend.py  run_backend_with_logs.py  run_fixed_server.py  run_server_subprocess.py  run_updated_backend.py  signup_login_page.html  simple_todo.db  simple_todo_app.py  start_backend.py  start_backend_fixed.py  task.md  test_chatbot.py  test_cli_integration.py  test_numeric_ids.py  test_server.py  (+3 more)
.claude/: settings.local.json
apps/backend/: README.md  alembic.ini  debug_login.py  debug_main.py  debug_signup.py  debug_todos.py  minimal_test.py  pyproject.toml  requirements.txt  simple_server.py  simple_test.py  start_server.py  test_app_start.py  test_auth_endpoint.py  test_database.py  test_fastapi.py  working_server.py  working_todo.db
apps/backend/alembic/: __init__.py  env.py
apps/backend/app/: __init__.py
apps/backend/app/api/: __init__.py
apps/backend/app/core/: config.py
apps/backend/app/models/: todo.py
apps/backend/app/routers/: todo.py
apps/backend/app/services/: todo_service.py
apps/backend/src/: __init__.py
apps/backend/src/api/: __init__.py  main.py  todos.py
apps/backend/tests/: test_api.py
(+258 files in other folders)
